# posse

./: .env.example  .env.mastodon.test  .gitignore  .trivyignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CVE-2025-60876-FIX.md  Dockerfile  INTEGRATION_GUIDE.md  LICENSE  Makefile  README.md  REPOST_PLAN.md  config.example.yml  config.yml  docker-compose.example.yml  docker-compose.yml  osv-scanner.toml  pyproject.toml  verify_cve_fix.sh
.github/: dependabot.yml
.github/workflows/: audit.yml  (+3 more)
docs/: DEPENDENCY_UPDATE_PROTOCOL.md  FEATURE_FLOW_DIAGRAMS.md  INDIEWEB_NEWS_GUIDE.md  INTERACTION_SYNC_ARCHITECTURE.md  INTERACTION_SYNC_README.md  SECURITY_HARDENING.md  SYNDICATION_GUIDE.md  UPGRADE_GUIDE.md  WEBMENTION_RECEIVER_DESIGN.md  WEBMENTION_REPLY_GUIDE.md  WEBMENTION_SENDING_GUIDE.md  WEBMENTION_STANDARD_REVIEW.md
scripts/: get_bluesky_session.py  migrate_interactions_to_sqlite.py  run-mastodon-tests.sh  setup-mastodon-test.sh  validate_syndication_mapping_consistency.py
tests/: MASTODON_INTEGRATION_TESTING.md  conftest.py  test_async_posting.py  test_base_client.py  test_bluesky.py  test_config.py  test_content_extraction.py  test_content_sanitizer.py  test_dead_link_pruning.py  test_filters.py  test_ghost.py  test_healthcheck.py  test_image_filtering.py  test_indieweb.py  test_interaction_discovery.py  test_interaction_migration_script.py  test_interaction_storage.py  test_interactions_endpoint.py  test_link_tracking.py  test_llm.py  test_mastodon.py  test_mastodon_integration.py  test_multi_account.py  test_posse.py  test_posse_integration.py  test_post_retry.py  test_post_update_webhook.py  test_pushover.py  test_pushover_integration.py  test_ref_links.py  test_repost_dead_links.py  test_resanitize_stored.py  test_security.py  test_social_reply_notifications.py  test_split_multi_image_posts.py  test_syndication_db_update.py  test_syndication_mapping_consistency_script.py  test_tag_filtering.py  test_webmention_receiver.py  test_webmention_reply.py
widget/: social-interactions-widget.html  social-interactions.hbs  webmention-reply.html
(+44 files in other folders)
